# template-generator

./: .gitignore  .replit  TODO.md  conversation.md  main.sh  package-lock.json  package.json  pyproject.toml  replit.md
backend/: render.yaml  requirements.txt
backend/app/: api.py  api_backup.py  main.py  models.py  services.py  services_backup.py
backend/uploads/: Annual_Report_2024.docx  generated_report.pptx  test.txt  test_upload.txt
frontend/: index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  App_backup.jsx  index.css
frontend/src/components/: ChatPanel.jsx  ChatPanel_backup.jsx  PreviewPanel.jsx
